<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterCityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/transparent"
        app:boxBackgroundColor="@color/green"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:hintTextAppearance="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        app:endIconMode="clear_text"
        app:helperText="*Required"
        app:helperTextTextColor="@color/white"
        app:helperTextEnabled="true"
        app:errorTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <AutoCompleteTextView
            android:id="@+id/enterCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:hint="@string/enter_the_city_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCityLayout"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/submit"
        android:padding="8dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/clearSearchHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        android:textColor="@color/blue"
        android:background="@color/transparent"
        android:gravity="center"
        android:layout_margin="32dp"
        android:padding="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>